<resources>
    <string name="app_name">Atomic.io</string>
    <string name="action_settings">Settings</string>


    <string name="open_drawer">"Open Drawer</string>
    <string name="close_drawer">"Close Drawer</string>


    <string name="affirmation_template">\"I am a...\"</string>
    <string name="identity_label">Aspirational Identity</string>
    <string name="identity_hint">EG: \"Organized Person\"</string>
    <string name="type_label">Identity Type</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_identity">+ Identity</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="habit_name_label">Name</string>
    <string name="habit_hint">EG: Wake up at 6am</string>
    <string name="habit_identity_label">Identity (optional)</string>
    <string name="duration_label">Duration<br>(min)</br></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_identities">Identities</string>
    <string name="tab_agenda">Agenda</string>
    <string name="tab_habits">Habits</string>
    <string name="tab_analytics">Analytics</string>
    <string name="save_button">Save Button</string>
    <string name="delete_button">Delete Button</string>
    <string name="task_title">Title</string>
    <string name="start_label">Start</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="add_habits">ADD HABITS</string>
    <string name="identity_type_icon">Identity Type Icon</string>
    <string name="expand_list_icon">Expand List Icon</string>
    <string name="add_habit_icon">Add Habit Icon</string>
    <string name="edit_identity">Edit Identity</string>
    <string name="confirm_identity_delete">Delete Habits for this Identity?</string>
    <string name="add_new_habit">Add New Habit</string>
    <string name="add_habit">+ Habit</string>
    <string name="habit_label">Habit</string>
    <string name="view_as_checklist">View As Checklist</string>
    <string name="agenda_fragment_title">Agenda</string>
    <string name="identity_fragment_title">Identities/Habits</string>
    <string name="export_template">Export Template</string>
    <string name="import_template">Import Template</string>
    <string name="identity">Identity</string>
    <string name="scheduled_tasks_header"><u>Scheduled Tasks:</u></string>
    <string name="schedule_new_task_button">Schedule New Task</string>
    <string name="repeats_label">Repeats</string>

</resources>
