<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewHabitName"
        style="@style/FormLabel"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:text="@string/habit_name_label"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextHabitName"
        style="@style/FormEditText"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/habit_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHabitName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textViewHabitName" />

    <ImageView
        android:id="@+id/spinnerImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/identity_type_icon"
        app:layout_constraintBottom_toBottomOf="@+id/identityLabelTextView"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/identityLabelTextView"
        app:srcCompat="@drawable/ic_other" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerImage"
        app:layout_constraintTop_toTopOf="@+id/spinnerImage" />

    <TextView
        android:id="@+id/identityLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/identity"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewHabitName" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="64dp" />

    <TextView
        android:id="@+id/scheduledTasksTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/scheduled_tasks_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identityLabelTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduledTasksTextView" />

    <Button
        android:id="@+id/newTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/schedule_new_task_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>
