<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintBottom_toTopOf="@id/saveHabitButton">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primaryColor"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewHabitName"
                        style="@style/FormLabel"
                        android:text="@string/habit_name_label" />

                    <EditText
                        android:id="@+id/editTextHabitName"
                        style="@style/FormEditText"
                        android:hint="@string/habit_hint"
                        android:inputType="text" />
                </LinearLayout>

                <include layout="@layout/spinner_layout"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDuration"
                        style="@style/FormLabel"
                        android:text="@string/duration_label" />

                    <EditText
                        android:id="@+id/editTextDuration"
                        style="@style/FormEditText"
                        android:inputType="text" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <Button
        android:id="@+id/saveHabitButton"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
