<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTaskName"
                    style="@style/FormLabel"
                    android:text="@string/task_title" />

                <EditText
                    android:id="@+id/editTextTaskName"
                    style="@style/FormEditText"
                    android:hint="@string/habit_hint"
                    android:inputType="text" />
            </LinearLayout>

            <include layout="@layout/spinner_layout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startTime"
                    style="@style/FormLabel"
                    android:text="@string/start_label" />

                <EditText
                    android:id="@+id/editStartTime"
                    android:clickable="true"
                    android:focusable="false"
                    style="@style/FormEditText" />

                <TextView
                    android:id="@+id/endTime"
                    style="@style/FormLabel"
                    android:text="@string/end_label" />

                <EditText
                    android:id="@+id/editEndTime"
                    android:clickable="true"
                    android:focusable="false"
                    style="@style/FormEditText" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/crudButtons"
        layout="@layout/crud_buttons"/>
</LinearLayout>
